fix: subehading top margin, portfolio section button width on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@ html{
     @apply text-offblack dark:text-offwhite font-primary text-[clamp(_36px,_calc(4vw+4px),_58px)] leading-[clamp(34px,_calc(2vw+20px),_58px)];
 }
 .text-subheading{
-    @apply text-gray-300 font-secondary font-bold text-[clamp(20px,_3.5vw,_26px)] leading-[clamp(24px,_calc(2vw+12px),_58px)];
+    @apply text-gray-300 font-secondary font-bold text-[clamp(20px,_2vw,_26px)] leading-[clamp(24px,_calc(2vw+12px),_58px)] mt-0 md:-mt-2;
 }
 .text-subheading-green{
     @apply text-green-secondary dark:text-green-primary font-secondary font-semibold text-[clamp(22px,_2.5vw,_30px)] -mt-[6px];
